# waveshare-nominal-touchscreen

./: Cargo.toml  LICENSE  README.md  build.rs  espflash.toml  rustfmt.toml  sdkconfig.defaults
.cargo/: config.toml
src/: hmi.rs  main.rs
src/components/EXIO/: CMakeLists.txt  README.md
src/components/LCD_Driver/: CMakeLists.txt  KConfig.projbuild  ST7701S.c  ST7701S.h
src/components/LVGL_Driver/: LVGL_Driver.c  LVGL_Driver.h
src/components/QMI8658/: CMakeLists.txt  README.md
src/components/Touch_Driver/: README.md
src/components/lvgl_driver/: CMakeLists.txt  lvgl_driver.c
waveshare-nominal/: app.connect  scan_serial_devices.py  stream_console_data.py
waveshare-touchscreen/: Cargo.toml  build.rs
waveshare-touchscreen/src/: hmi.rs  main.rs
waveshare-touchscreen/src/components/Buzzer/: CMakeLists.txt
waveshare-touchscreen/src/components/EXIO/: CMakeLists.txt  EXIO.c  EXIO.h
waveshare-touchscreen/src/components/I2C_Driver/: CMakeLists.txt  README.md
waveshare-touchscreen/src/components/LCD_Driver/: KConfig.projbuild  README.md  ST7701S.c  ST7701S.h
waveshare-touchscreen/src/components/LVGL_Driver/: CMakeLists.txt  LVGL_Driver.c  LVGL_Driver.h
waveshare-touchscreen/src/components/QMI8658/: QMI8658.c  QMI8658.h
waveshare-touchscreen/src/components/TCA9554PWR/: README.md  TCA9554PWR.c  TCA9554PWR.h
waveshare-touchscreen/src/components/Touch_Driver/: CMakeLists.txt
