[package]
name = "touchscreen_demo_rs"
version = "0.1.0"
edition = "2024"

[dependencies]
esp-idf-sys = "0.36.1"

[[package.metadata.esp-idf-sys.extra_components]]
component_dirs = [
    "src/components/EXIO",
    "src/components/I2C_Driver",
]

[build-dependencies]
embuild = {version = "0.33.1", features = ["espidf"]}
