[package]
name = "touchscreen_demo_rs"
version = "0.1.0"
edition = "2024"

[dependencies]
esp-idf-sys = "0.36.1"

[[package.metadata.esp-idf-sys.extra_components]]
component_dirs = ["src/components/Buzzer"]

[[package.metadata.esp-idf-sys.extra_components]]
component_dirs = ["src/components/EXIO"]
bindings_header = "src/components/EXIO/EXIO.h"

[[package.metadata.esp-idf-sys.extra_components]]
component_dirs = ["src/components/LCD_Driver"]
bindings_header = "src/components/LCD_Driver/ST7701S.h"

[[package.metadata.esp-idf-sys.extra_components]]
component_dirs = ["src/components/I2C_Driver"]
bindings_header = "src/components/I2C_Driver/I2C_Driver.h"

[[package.metadata.esp-idf-sys.extra_components]]
component_dirs = ["src/components/TCA9554PWR"]

[build-dependencies]
embuild = {version = "0.33.1", features = ["espidf"]}
